examples/test/testpolicy7503.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7503
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key36: value9
      key4: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value41
          key36: value0
          key45: value0
      podSelector:
        matchLabels:
          key1: value4
